# dominion

./: .ignore  Cargo.toml  README.md  deny.toml  justfile
benches/: parsing_benchmark.rs  serialize_benchmark.rs
chat/: Cargo.toml  README.md  example.configuration.toml
chat/src/: a.rs  cname.rs  lib.rs  main.rs  txt.rs
dominion/: Cargo.toml  README.md
dominion/examples/: echo_multithreaded.rs  echo_server.rs
dominion/src/: lib.rs
examples/: parse_static.rs  serialize_static.rs
parser/: Cargo.toml  README.md
parser/benches/: parsing_benchmark.rs  serialize_benchmark.rs
parser/examples/: parse_static.rs  serialize_static.rs
parser/src/: binutils.rs  body.rs  header.rs  lib.rs
parser/src/body/: name.rs
parser/tests/: parse_static.rs
src/: binutils.rs  body.rs  header.rs  lib.rs
src/body/: name.rs
tests/: parse_static.rs
