[package]
name = "dominion-parser"
description = "DNS protocol parser"
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lopukhov/dominion"
keywords = ["dns", "named", "parser", "domain"]
categories = ["network-programming"]
include = ["src/**/*", "AUTHORS", "LICENSE", "README.md", "assets/dns_request.bin", "!**/assets/**/*"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
pretty-hex = "0.3.0"
criterion = "0.3"
pprof = { version = "0.9", features = ["flamegraph", "criterion"] }

[[bench]]
name = "parsing_benchmark"
harness = false

[[bench]]
name = "serialize_benchmark"
harness = false

[profile.bench]
debug = true

[profile.optimized]
inherits = "release"
lto = true
strip = true
codegen-units = 1
