[package]
name = "dominion-chat"
version = "0.1.1"
edition = "2021"
description = "DNS chat server for fun and profit"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/lopukhov/dominion"
keywords = ["dns", "named", "chat", "domain"]
categories = ["network-programming"]
include = ["src/**/*", "README.md", "assets/dominion-chat-hello-world.png", "!**/assets/**/*"]

[dependencies]
dominion = { path = "../dominion", version = "0.2"}
argh = "0.1"
num_cpus = "1"
owo-colors = "3"
