[package]
name = "dominion-chat"
version = "0.3.0"
edition = "2024"
description = "DNS chat server for fun and profit"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/lopukhov/dominion"
keywords = ["dns", "named", "chat", "domain"]
categories = ["network-programming"]
include = ["src/**/*", "README.md", "assets/dominion-chat-hello-world.png", "!**/assets/**/*"]

[dependencies]
dominion = { path = "../dominion", version = "0.4"}
argh = "0.1"
num_cpus = "1"
owo-colors = "3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
memmap2 = "0.5"
