[package]
name = "dominion"
version = "0.3.0"
edition = "2021"
description = "Build DNS clients and servers"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/lopukhov/dominion"
keywords = ["dns", "named", "server", "client", "domain"]
categories = ["network-programming"]
include = ["src/**/*", "README.md", "!**/assets/**/*"]

[dependencies]
dominion-parser = { path = "../parser", version = "0.4"}
