[package]
name = "dominion-parser"
description = "DNS protocol parser"
license = "MPL-2.0"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lopukhov/dominion"
keywords = ["dns", "named", "parser", "domain"]
categories = ["network-programming"]
include = ["src/**/*", "README.md", "assets/dns_request.bin", "benches/*.rs", "!**/assets/**/*"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
pretty-hex = "0.3.0"
criterion = "0.3"
pprof = { version = "0.9", features = ["flamegraph", "criterion"] }

[[bench]]
name = "parsing_benchmark"
harness = false

[[bench]]
name = "serialize_benchmark"
harness = false
